# tewi

./: .dockerignore  .env.default  .gitignore  .prettierrc  Cargo.toml  Dockerfile  Dockerfile.tailscale  README.md  docker-compose.yml  flake.nix  justfile  package-lock.json  package.json  tailscale.docker-compose.yml
frontend/: .gitignore  build.ts  declarations.d.ts  eslint.config.js  node.tsconfig.json  package.json  tsconfig.json  web.tsconfig.json
frontend/src/: admin.css  board-index.css  board-page.css  error.css  home.ts  inter.css  login.css  main.css  page-transition.css  pagination.css  post-form.css  post.css  pre-flight.css  thread-page.css  thread.css  view-transitions.ts
migrations/: 001_create_admins.sql  002_create_boards.sql  003_create_bans.sql  004_create_posts.sql  005_sessions.sql  006_create_attachment_policies.sql  007_references.sql  008_thread_hidden.sql  009_remove_content.sql  010_max_attachments.sql
src/: auth.rs  board_info.rs  config.rs  err.rs  extract_session.rs  main.rs  markup.rs  pagination.rs  parse_multipart.rs  util.rs
src/controllers/: admin.rs  mod.rs  post.rs  thread.rs
src/filters/: attachment_links.rs  mod.rs
src/middleware/: auth.rs  mod.rs  pretty_errors.rs
src/models/: admins.rs  attachment_policies.rs  attachments.rs  bans.rs  board_categories.rs  boards.rs  ips.rs  mod.rs  posts.rs  sessions.rs  threads.rs
src/view_structs/: ban_form.rs  board_page.rs  delete_form.rs  mod.rs  thread.rs  (+1 more)
templates/: board-page.html  cataglog.html  home.html  layout.html  page.html  thread.html  utils.html
(+47 files in other folders)
