[package]
name = "tewi"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.98"
axum = "0.8.4"
chrono = { version = "0.4.41", features = ["serde"] }
serde = { version = "1.0.219", features = ["derive"] }
sqlx = { version = "0.8.6", features = ["runtime-tokio-rustls", "postgres", "migrate", "uuid", "chrono", "ipnetwork"] }
ipnetwork = "0.20.0"
tokio = { version = "1.47.0", features = ["full"] }
tower = "0.5.2"
tower-http = { version = "0.6.6", features = ["fs", "cors"] }
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }
uuid = { version = "1.17.0", features = ["v4", "serde"] }
askama = "0.14.0"
argon2 = "0.5.3"
serde_urlencoded = "0.7.1"
clap = { version = "4.5.54", features = ["derive"] }
axum-extra = { version = "0.12.5", features = ["cookie"] }
